--- a/run/application_config.json
+++ b/run/application_config.json
@@ -14,7 +14,10 @@
       "genid": "<Function v4>"
     },
     "security": {
-      "domainWhiteList": [],
+      "domainWhiteList": [
+        "http://127.0.0.1:7001",
+        "http://192.168.11.186:3000"
+      ],
       "protocolWhiteList": [],
       "defaultMiddleware": "csrf,hsts,methodnoallow,noopen,nosniff,csp,xssProtection,xframe,dta",
       "csrf": {
@@ -110,6 +113,7 @@
         "C:\\Users\\liuqi\\work\\node-server\\node_modules\\egg-view\\config\\locales",
         "C:\\Users\\liuqi\\work\\node-server\\node_modules\\egg-view-nunjucks\\config\\locales",
         "C:\\Users\\liuqi\\work\\node-server\\node_modules\\egg-validate\\config\\locales",
+        "C:\\Users\\liuqi\\work\\node-server\\node_modules\\egg-cors\\config\\locales",
         "C:\\Users\\liuqi\\work\\node-server\\node_modules\\egg\\config\\locales",
         "C:\\Users\\liuqi\\work\\node-server\\config\\locales"
       ],
@@ -198,6 +202,9 @@
       "cache": false
     },
     "validate": {},
+    "cors": {
+      "origin": "<Function corsOrigin>"
+    },
     "env": "local",
     "name": "hackernews",
     "keys": "<String len: 16>",
@@ -217,6 +224,7 @@
         "co-wechat": "^2.4.0",
         "crypto": "^1.0.1",
         "egg": "^2.0.0",
+        "egg-cors": "^2.2.3",
         "egg-validate": "^2.0.2",
         "egg-view-nunjucks": "^2.1.4",
         "moment": "^2.19.2"
@@ -321,6 +329,7 @@
       "logging": false
     },
     "coreMiddleware": [
+      "cors",
       "meta",
       "siteFile",
       "notfound",
@@ -543,6 +552,17 @@
       "from": "C:\\Users\\liuqi\\work\\node-server\\config\\plugin.js",
       "path": "C:\\Users\\liuqi\\work\\node-server\\node_modules\\egg-validate",
       "version": "2.0.2"
+    },
+    "cors": {
+      "enable": true,
+      "package": "egg-cors",
+      "name": "cors",
+      "dependencies": [],
+      "optionalDependencies": [],
+      "env": [],
+      "from": "C:\\Users\\liuqi\\work\\node-server\\config\\plugin.js",
+      "path": "C:\\Users\\liuqi\\work\\node-server\\node_modules\\egg-cors",
+      "version": "2.2.3"
     }
   }
 }
