--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "co-wechat": "^2.4.0",
     "crypto": "^1.0.1",
     "egg": "^2.0.0",
+    "egg-cors": "^2.2.3",
     "egg-validate": "^2.0.2",
     "egg-view-nunjucks": "^2.1.4",
     "moment": "^2.19.2"
